# request-maker

./: .editorconfig  .gitignore  Cargo.toml  README.md  compile.sh  meson.build  meson_options.txt
build-aux/: cargo-build.sh  com.emarifer.RequestMaker.json  meson-build.sh
data/: meson.build  prototype.blp  request-maker.desktop.in  request-maker.gresource.xml  rowheader.blp
data/icons/: meson.build
data/ui/: main_window.blp  request_header_pane.blp  request_header_row.blp  response_panel.blp
hooks/: pre-commit.hook
install/share/applications/: com.emarifer.request-maker.desktop
install/share/icons/hicolor/: icon-theme.cache
install/share/locale/en/LC_MESSAGES/: request-maker.mo
install/share/locale/eo/LC_MESSAGES/: request-maker.mo
install/share/locale/es/LC_MESSAGES/: request-maker.mo
install/share/request-maker/: request-maker.gresource
po/: LINGUAS  en.po  eo.po  es.po  meson.build  request-maker.pot
src/: application.rs  config.rs.in  main.rs  meson.build  window.rs
src/client/: client.rs  models.rs
src/components/: mod.rs  response_panel.rs  rowheader.rs
src/objects/: header.rs
src/widgets/: mod.rs  request_header_pane.rs  request_header_row.rs
ui/: prototype.blp  prototype.ui
